added github actions

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   },
-  "dependencies": {
+  "peerDependencies": {
     "vue": "^2.6.7"
   }
 }
