--- a/package.json
+++ b/package.json
@@ -32,24 +32,25 @@
   },
   "homepage": "",
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.0",
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.52.0",
     "eslint-config-vue": "^2.0.2",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-vue": "^5.2.2",
-    "standard": "^12.0.1",
-    "uglifyjs-webpack-plugin": "^2.1.2",
-    "vue": "^2.6.7",
-    "vue-loader": "^15.6.4",
-    "vue-template-compiler": "^2.6.7",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1"
+    "eslint-plugin-vue": "^9.18.1",
+    "eslint-webpack-plugin": "^4.0.1",
+    "standard": "^17.1.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "vue": "^3.3.7",
+    "vue-loader": "^15.11.1",
+    "vue-template-compiler": "^2.7.15",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "peerDependencies": {
-    "vue": "^2.6.7"
+    "vue": "^3.3.7"
   }
 }
