--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,6 @@ jobs:
           node-version: '18'
           registry-url: 'https://registry.npmjs.org'
       - name: Publish package on NPM 📦
-        run: npm install && npm run prod && npm publish
+        run: npm install && npm run build && npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
